Fix misalignment when resizing

--- a/meme-generator/src/style.css
+++ b/meme-generator/src/style.css
@@ -9,6 +9,8 @@ body {
 
 main {
     padding: 36px;
+    max-width: fit-content;
+    margin: auto;
 }
 
 .header {
